# lzss

./: .cargo-rdme.toml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  check.sh
.github/workflows/: ci.yml
fuzzing/: Cargo.toml  README.mkdn
lzss/: Cargo.toml  ChangeLog.md  Safety.md  build.rs
lzss-cli/: Cargo.toml  ChangeLog.md  README.md
lzss-cli/src/: main.rs
lzss/benches/: benchmark.rs
lzss/src/: bits.rs  error.rs  io_simple.rs  lib.rs  macros.rs  read_write.rs  slice.rs  slice_safe.rs  unwrap.rs  vec.rs  void.rs
lzss/src/dynamic/: compress.rs  decompress.rs  mod.rs
lzss/src/generic/: compress.rs  compress_in_place.rs  decompress.rs  mod.rs
lzss/tests/: common.rs  dynamic.rs  generic.rs  generic_in_place.rs
