[package]
name = "lzss"
version = "0.8.2"
authors = ["ALeX Kazik <alex@kazik.de>"]
edition = "2021"
description = "A LZSS en-/decompressor (lossless data compression, no_std capable, in pure Rust)"
repository = "https://github.com/alexkazik/lzss"
license = "MIT"
keywords = ["lzss", "compression", "no_std"]
categories = ["compression", "no-std"]

[dependencies]
void = { version = "1.0.2", default-features = false }

[features]
default = ['std', 'safe']
alloc = []
safe = []
std = ['void/std', 'alloc']

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
